# HyperVariables

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.sh  package.xml  setup.sh
.github/workflows/: actions.yml  cmake.yml
apps/tests/: CMakeLists.txt  main.cpp
include/hyper/: definitions.hpp  jacobian.hpp  matrix.hpp  vector.hpp
include/hyper/ceres/manifolds/: forward.hpp  manifolds.hpp  wrapper.hpp
include/hyper/ceres/manifolds/variables/: bearing.hpp  euclidean.hpp  forward.hpp  gravity.hpp  manifolds.hpp  se3.hpp  stamped.hpp  su2.hpp
include/hyper/ceres/manifolds/variables/groups/: se3.hpp  su2.hpp
include/hyper/manifolds/ceres/: bearing.hpp  euclidean.hpp  forward.hpp  gravity.hpp  se3.hpp  su2.hpp  wrapper.hpp
include/hyper/metrics/: abstract.hpp  angular.hpp  cartesian.hpp  euclidean.hpp  forward.hpp  manifold.hpp  metric.hpp  metrics.hpp  se3.hpp  su2.hpp
include/hyper/stochastics/: forward.hpp  gaussian.hpp  uncertainty.hpp
include/hyper/variables/: abstract.hpp  adapters.hpp  axes_offset.hpp  bearing.hpp  cartesian.hpp  composite.hpp  forward.hpp  gravity.hpp  intrinsics.hpp  jacobian.hpp  macros.hpp  memory.hpp  orthonormality_alignment.hpp  pitch_yaw.hpp  residual.hpp  rn.hpp  se3.hpp  sensitivity.hpp  stamped.hpp  su2.hpp  variable.hpp  variables.hpp
include/hyper/variables/definitions/: jacobian.hpp  macros.hpp  residual.hpp
include/hyper/variables/distortions/: abstract.hpp  base.hpp  distortion.hpp  distortions.hpp  equidistant.hpp  forward.hpp  iterative_radial.hpp  radial_tangential.hpp
include/hyper/variables/groups/: adapters.hpp  forward.hpp  groups.hpp  se3.hpp  su2.hpp
include/hyper/variables/metrics/: abstract.hpp  angular.hpp  cartesian.hpp  manifold.hpp
include/hyper/variables/stochastic/: covariance.hpp  forward.hpp  gaussian.hpp  invert_psd_matrix.hpp  uncertainty.hpp
include/metrics/: abstract.hpp  angular.hpp  cartesian.hpp  forward.hpp  manifold.hpp
include/variables/: abstract.hpp  bearing.hpp  cartesian.hpp  composite.hpp  forward.hpp  gravity.hpp  intrinsics.hpp  jacobian.hpp  macros.hpp  memory.hpp  orthonormality_alignment.hpp  pitch_yaw.hpp  stamped.hpp
include/variables/distortions/: abstract.hpp  base.hpp  equidistant.hpp  forward.hpp  iterative_radial.hpp  radial_tangential.hpp
include/variables/groups/: forward.hpp  se3.hpp  su2.hpp
internal/hyper/ceres/manifolds/: wrapper.cpp
internal/hyper/ceres/manifolds/variables/: bearing.cpp  gravity.cpp  se3.cpp  su2.cpp
internal/hyper/ceres/manifolds/variables/groups/: se3.cpp  su2.cpp
internal/hyper/manifolds/ceres/: bearing.cpp  gravity.cpp  se3.cpp  su2.cpp  wrapper.cpp
internal/hyper/metrics/: angular.cpp  euclidean.cpp  se3.cpp  su2.cpp
internal/hyper/variables/distortions/: distortion.cpp
plugins/: matrix_base_plugin.hpp
tests/: CMakeLists.txt
tests/include/hyper/variables/: lie_group_tests.hpp
tests/internal/hyper/metrics/: metrics_tests.cpp
tests/internal/hyper/variables/: adapters_tests.cpp  intrinsics_tests.cpp  lie_group_tests.cpp  orthonormality_alignment_tests.cpp  se3_tests.cpp  sensitivity_tests.cpp  su2_tests.cpp
tests/internal/hyper/variables/distortions/: distortion_tests.cpp
tests/internal/hyper/variables/groups/: adapters_tests.cpp  se3_tests.cpp  su2_tests.cpp
tests/internal/hyper/variables/metrics/: metrics_tests.cpp
tests/plugins/: matrix_base_plugin_tests.cpp
tests/src/: intrinsics_tests.cpp  main.cpp  orthonormality_alignment_tests.cpp
tests/src/distortions/: distortion_tests.cpp
tests/src/groups/: se3_tests.cpp  su2_tests.cpp
tests/src/metrics/: metrics_test.cpp
tests/src/variables/: intrinsics_tests.cpp
tests/src/variables/distortions/: distortion_tests.cpp
tests/src/variables/groups/: se3_tests.cpp  su2_tests.cpp
